--- a/frontend/styles/README
+++ b/frontend/styles/README
@@ -1,3 +1,3 @@
-Place your optional styles in this folder.
+Place your optional style modules in this folder.
 
-See https://vaadin.com/docs/v10/flow/theme/theming-overview.html for getting started on theming Vaadin Flow applications.
+See https://vaadin.com/docs/flow/theme/theming-overview.html for getting started on theming Vaadin Flow applications.
